--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -28,6 +28,7 @@
   .card-wrapper {
     opacity: 0;
     animation: card-enter 0.6s v.$ease-spring-soft forwards;
+    overflow: visible !important;
 
     @for $i from 1 through 10 {
       &:nth-child(#{$i}) {
@@ -47,6 +48,7 @@
   .card {
     border: 0;
     background: none;
+    overflow: visible !important;
 
     %img-radius {
       border-radius: v.$radius-lg v.$radius-lg 0 0;
